<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/picture"
            app:srcCompat="@drawable/avatar_m_a2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/yourLimit"
            android:textSize="20sp"
            app:fontFamily="@font/nexa_text_extra_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/videosPerDay"
            android:textSize="28sp"
            app:fontFamily="@font/nexa_text_extra_bold" />

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lines="6"
            android:textColor="@color/textColorSecondary"
            android:layout_marginHorizontal="18dp"
            android:text="@string/videosLimitInfo"
            android:textSize="12sp" />


        <com.palmdev.german_books.presentation.custom_view.MainButtonView
            android:id="@+id/btnGetPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:buttonColor="yellow"
            app:buttonCornerRadius="12dp"
            android:layout_marginTop="18dp"
            app:textButton="@string/getPremium"
            app:textMarginVertical="14dp"
            app:textSizeButton="15sp"/>

        <TextView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:padding="15dp"
            android:layout_gravity="center"
            android:textColor="@color/textColorSecondary" />
    </LinearLayout>

</androidx.cardview.widget.CardView>