<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_purple"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/whatIsYourNativeLang"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:fontFamily="@font/nexa_text_extra_bold" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none"
        tools:listitem="@layout/item_language" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_bottom_sheet_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textSize="26sp"
            app:fontFamily="@font/nexa_text_extra_bold"
            android:text="@string/selectLanguage" />

        <com.palmdev.german_books.presentation.custom_view.MainButtonView
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
          android:layout_marginBottom="8dp"
            app:textButton="@string/confirm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/languageMayBeDownloaded"
            android:textSize="12sp"
            android:textColor="@color/purple_accent"/>
    </LinearLayout>
</LinearLayout>