<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="17dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgHeart"
            android:layout_marginHorizontal="100dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_heart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/pleaseRateApp"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/thisWillImprove" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/gray_04"
            android:gravity="center"
            android:text="@string/redirectToGooglePlay" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="8dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressBackgroundTint="@color/blue_light"
            android:progressTint="@color/blue_main"
            tools:rating="1"
            android:stepSize="1" />



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_02" />

        <Button
            android:id="@+id/btnClose"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notNow"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.cardview.widget.CardView>